# hammock

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: backend.yml  e2e.yml  frontend.yml
cli/: __init__.py  __main__.py  _external.py  doctor.py  job.py  project.py
dashboard/: CLAUDE.md  __init__.py  __main__.py  app.py  projects.py  settings.py  workflows.py
dashboard/api/: __init__.py  app.py  artifacts.py  chat.py  costs.py  hil.py  jobs.py  observatory.py  project_workflows.py  projections.py  projects.py  prompts.py  settings.py  sse.py  stages.py  workflow_builder.py  workflows.py
dashboard/code/: branches.py  worktrees.py
dashboard/compiler/: __init__.py  compile.py  overrides.py  validators.py
dashboard/driver/: ipc.py  lifecycle.py  supervisor.py
dashboard/frontend/: .eslintrc.cjs  CLAUDE.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
dashboard/hil/: __init__.py  contract.py  orphan_sweeper.py  state_machine.py  template_registry.py
dashboard/jobs/: lifecycle.py
dashboard/mcp/: __init__.py  __main__.py  channel.py  manager.py  server.py
dashboard/runner/: builder.py  run_job.py  spawn.py
dashboard/specialist/: materialise.py  resolver.py
dashboard/state/: __init__.py  cache.py  chat.py  classify.py  projections.py  pubsub.py
dashboard/tests/: conftest.py  test_api.py  test_artifacts.py  test_lifecycle.py  test_node_order.py  test_orchestrator_chat_api.py  test_orchestrator_events_durable.py  test_project_workflows_api.py  test_projects_api.py  test_sse.py  test_workflow_builder_api.py  test_workflow_expander_projection.py  test_workflows_api.py  test_workflows_three_tier.py
dashboard/watcher/: __init__.py  tailer.py
dashboard_v2/: __init__.py  __main__.py  projects.py  settings.py  workflows.py
dashboard_v2/api/: app.py  artifacts.py  jobs.py  project_workflows.py  projections.py  projects.py  prompts.py  sse.py  workflow_builder.py  workflows.py
dashboard_v2/frontend/: eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dashboard_v2/jobs/: lifecycle.py
dashboard_v2/runner/: builder.py  run_job.py  spawn.py
dashboard_v2/tests/: conftest.py  test_api.py  test_artifacts.py  test_lifecycle.py  test_node_order.py  test_orchestrator_chat_api.py  test_orchestrator_events_durable.py  test_project_workflows_api.py  test_projects_api.py  test_prompts_api.py  test_sse.py  test_workflow_builder_api.py  test_workflow_expander_projection.py  test_workflows_api.py  test_workflows_three_tier.py
docs/: 02-proposal-lifecycle.md  design.md  hammock-design-patch.md  hammock-impl-patch.md  hammock-v2-design.md  hammock-v2-extras.md  hammock-v2-projects-and-chat.md  hammock-v2-workflow-expander.md  hammock-workflow.md  hil-bridge-mcp-section.md  implementation.md  loop-execution-model.md  presentation-plane.md  projects-management.md  runbook.md
docs/for_agents/: architecture.md  development-process.md  gotchas.md  memory.md  rules.md  testing.md
docs/notes/: 2026-05-04-declarative-stage-improvements.md  2026-05-04-hammock-design-findings.md  2026-05-05-codex-review-design-patch.md
docs/prompts/: stage-prompt.txt
docs/specs/: 2026-05-03-real-claude-e2e-test-design.md  2026-05-04-real-claude-e2e-impl-plan.md  2026-05-04-real-claude-e2e-precondition-plan.md
docs/stages/: README.md  stage-00.md  stage-01.md  stage-02.md  stage-03.md  stage-04.md  stage-05.md  stage-06.md  stage-07.md  stage-08.md  stage-09.md  stage-10.md  stage-11.md  stage-12.5.md  stage-12.md  stage-13.md  stage-14.md  stage-15.md  stage-16.md
engine/v1/: CLAUDE.md  __init__.py  __main__.py  artifact.py  code_dispatch.py  driver.py  git_ops.py  hil.py  loader.py  loop_dispatch.py  predicate.py  prompt.py  resolver.py  substrate.py  validator.py
hammock/: README.md  __init__.py
hammock/engine/: runner.py  workflow.py
hammock/hooks/: __init__.py  check_intake.py  validate-stage-exit.sh
hammock/prompts/: execute-plan-expander.md  implement.md  orchestrator.md  read-impl-plan.md  review.md  stage-checkpoint.md  workflow-builder.md  write-bug-report.md  write-design-spec.md  write-impl-spec.md  write-summary.md
hammock/tests/: test_check_intake.py  test_helper_prompts.py  test_runner.py  test_workflow.py
hammock/workflows/: stage-implementation.yaml
hammock_v2/: README.md
hammock_v2/engine/: __init__.py  paths.py  runner.py  workflow.py
hammock_v2/prompts/: implement.md  orchestrator.md  pr-create.md  workflow-builder.md
hammock_v2/tests/: test_helper_prompts.py  test_runner.py  test_workflow.py
hammock_v2/workflows/: fix-bug.yaml
job_driver/: __main__.py  archive.py  cost_summary.py  prompt_builder.py  runner.py  stage_runner.py  stream_extractor.py
scripts/: manual-smoke-stage0.py  manual-smoke-stage04.py  manual-smoke-stage05.py  manual-smoke-stage06.py  manual-smoke-stage07.py  manual-smoke-stage08.py  manual-smoke-stage09.py  manual-smoke-stage1.py  manual-smoke-stage10.py  manual-smoke-stage12.5.py  manual-smoke-stage12.py  manual-smoke-stage14.py  manual-smoke-stage16.py  manual-smoke-stage2.py  manual-smoke-stage3.py  run-hammock.sh  start-stage.sh  v2_extras_smoke.py
shared/: __init__.py  artifact_validators.py  atomic.py  hil_factory.py  paths.py  predicate.py  slug.py
shared/models/: __init__.py  events.py  hil.py  integration_test_report.py  job.py  plan.py  presentation.py  project.py  specialist.py  stage.py  task.py  verdict.py
shared/v1/: CLAUDE.md  __init__.py  envelope.py  job.py  paths.py  workflow.py
tests/: CLAUDE.md  conftest.py
tests/cli/: conftest.py  test_doctor.py  test_job_submit.py  test_project_other.py  test_project_register.py
tests/dashboard/: conftest.py  test_app.py
tests/e2e/: cleanup.py  hil_builders.py  hil_stitcher.py  outcomes.py  preflight.py  repo_bootstrap.py  test_cleanup.py  test_full_lifecycle.py  test_hil_builders.py  test_hil_stitcher.py  test_outcomes.py  (+4 more)
tests/e2e/seed_test_repo/: README.md  add_integers.py  pyproject.toml  test_add_integers.py
(+357 files in other folders)
