[project]
name = "hammock"
version = "0.0.0"
description = "Agentic development harness — local orchestrator for safe, observable, human-gated edits to source repositories."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "Nitin Jaglan", email = "nitin.jaglan@gmail.com" }]

dependencies = [
    "fastapi>=0.110",
    "mcp>=1.27,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
    "uvicorn>=0.27",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
# Stages add deps as they need them; Stage 0 only requires pydantic.

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "hypothesis>=6",
    "factory-boy>=3.3",
    "pyright>=1.1.350",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# ``hammock`` ships bundled assets (Stop-hook script, job templates,
# UI templates) that the runtime resolves via importlib.resources;
# include it in the wheel so installed runs find them. Without this,
# ``job_driver/__main__._BUNDLED_STOP_HOOK`` would crash on a wheel
# install (the source-tree layout hides the issue in dev).
packages = ["shared", "dashboard", "cli", "job_driver", "hammock"]

[project.scripts]
hammock = "cli.__main__:app"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "node_modules", "docs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — pyright + formatter handle this
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]  # tests are allowed assertions / patterns ruff dislikes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["shared", "dashboard", "cli", "job_driver", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
# Pydantic v2 + Field(default_factory=list) trips strict-mode unknowns; relaxed.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Default norecursedirs is `('*.egg', '.*', '_darcs', 'build', 'CVS', 'dist',
# 'node_modules', 'venv', '{arguments}')`; we keep those plus exclude
# `tests/fixtures` (Stage 16 ships a synthetic project under there whose
# tests are part of the dogfood target, not the hammock suite).
norecursedirs = ["*.egg", ".*", "_darcs", "build", "CVS", "dist", "node_modules", "venv", "tests/fixtures"]
addopts = ["-q", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
markers = [
    "real_claude: opt-in marker for the real-claude e2e test (gates collection alongside HAMMOCK_E2E_REAL_CLAUDE=1; see docs/specs/2026-05-03-real-claude-e2e-test-design.md)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:factory.*",
    # asyncio's BaseSubprocessTransport emits an unraisable warning at
    # GC time when a subprocess is reaped just before transport teardown
    # (notably: tests that cancel a RealStageRunner mid-claude). The
    # warning is captured by pytest's `unraisableexception` plugin in
    # *its* teardown phase and re-raised against the *next* test, so a
    # per-test marker can't catch it. The actual contract is asserted
    # in tests/job_driver/test_real_runner_cancel_cleanup.py; the
    # warning itself is benign noise from asyncio bookkeeping.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
