[project]
name = "hammock"
version = "0.0.0"
description = "Agentic development harness — local orchestrator for safe, observable, human-gated edits to source repositories."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "TBD" }
authors = [{ name = "Nitin Jaglan", email = "nitin.jaglan@gmail.com" }]

dependencies = [
    "fastapi>=0.110",
    "mcp>=1.27,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "pyyaml>=6",
    "rich>=13",
    "typer>=0.12",
    "uvicorn>=0.27",
    "watchfiles>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "pytest-timeout>=2.3",
    "hypothesis>=6",
    "pyright>=1.1.350",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Hammock ships bundled prompts + workflows that the runtime resolves via
# importlib.resources; include both packages so installed runs find them.
packages = ["dashboard", "hammock"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "dist", "node_modules", "docs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length — pyright + formatter handle this
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B", "SIM"]  # tests are allowed assertions / patterns ruff dislikes

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["dashboard", "hammock"]
exclude = ["**/__pycache__", "**/node_modules", "**/frontend/dist", "**/frontend/node_modules"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
# Pydantic v2 + Field(default_factory=list) trips strict-mode unknowns; relaxed.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["dashboard/tests", "hammock/tests"]
addopts = ["-q", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
